# Scrum_Team

./: .gitignore  README.md  pyproject.toml
src/scrum_team/: crew.py  main.py
src/scrum_team/config/: agents.yaml  tasks.yaml
src/scrum_team/tools/: custom_tool.py
