[project]
name = "Scrum_Team"
version = "0.1.0"
description = "Scrum Team using crewAI"
authors = [{ name = "Luiz Gabriel", email = "senaaluizgabriel@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
scrum_team = "scrum_team.main:run"
run_crew = "scrum_team.main:run"
train = "scrum_team.main:train"
replay = "scrum_team.main:replay"
test = "scrum_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
